@@ -1,4 +1,4 @@
-$Id: README,v 1.4 2001-10-26 12:51:21 maire Exp $
+$Id: README,v 1.5 2001-12-07 11:49:08 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -42,7 +42,11 @@ $Id: README,v 1.4 2001-10-26 12:51:21 maire Exp $
  	in the PrimaryGeneratorAction class, and can be changed via the G4 
  	build-in commands of ParticleGun class (see the macros provided with 
  	this example).
- 	
+	
+ 	In addition one can choose randomly the impact point of the incident
+ 	particle. The corresponding interactive command is built in
+ 	PrimaryGeneratorMessenger class.
+	 	
  	A RUN is a set of events.
  	
  				
