@@ -40,6 +40,6 @@
      
   760 FORMAT(//,1X,'nb of process calls per event: ',
      +        /,3X,12A9)
-  761 FORMAT(   3X,12F9.2,//)
+  761 FORMAT(   3X,12F9.4,//)
 *
       END
